# mobile-cc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  install.sh
.github/workflows/: ci.yml  demos.yml  macos-smoke.yml  mirror-pages.yml  release-dryrun.yml  release.yml
android-app/: .gitignore  README.md  capacitor.config.json  package-lock.json  package.json
android-app/android/app/: build.gradle
android-app/android/app/src/main/: AndroidManifest.xml
android-app/android/app/src/main/java/dev/mobilecc/app/: LastScreenshotPlugin.java  MainActivity.java
android-app/android/app/src/main/res/values/: strings.xml  styles.xml
android-app/icon/: icon-native.html  render.mjs
android-app/www/: index.html
assets/: installed.json  mobile-cc-act.js  mobile-cc-autofit.js  mobile-cc-brand.js  mobile-cc-cc-markers.js  mobile-cc-cc-search.js  mobile-cc-commands.js  mobile-cc-defaults.js  mobile-cc-download.js  mobile-cc-draft.js  mobile-cc-kbd-diag.js  mobile-cc-kbd-direct.js  mobile-cc-kbd-overlay.js  mobile-cc-kbd-passthrough.js  mobile-cc-light-theme.js  mobile-cc-native-screenshot.js  mobile-cc-new-tab.js  mobile-cc-palette.js  mobile-cc-pinch-zoom.js  mobile-cc-prompt-nav.js  mobile-cc-push.js  mobile-cc-quickkeys.js  mobile-cc-scroll-memory.js  mobile-cc-scrollback.js  mobile-cc-tab-color-sync.js  mobile-cc-tab-menu.js  mobile-cc-tab-switch.js  mobile-cc-tab-topics.js  mobile-cc-tabs.js  mobile-cc-tap-focus.js  mobile-cc-term-size.js  mobile-cc-toolbar.js  mobile-cc-topics.js  mobile-cc-turns.js  mobile-cc-width.js
assets/pwa/: README.md  manifest.webmanifest  sw.js
assets/pwa/icons/: icon-source.html  render-icons.mjs
demos/: .gitignore  CONVENTIONS.md  GALLERY.md  README.md  check.mjs  gen-gallery.mjs  local-capture.sh  local-stills.sh  manifest.json  package.json  run.sh  stills-readme.mjs
demos/fixtures/: cc-transcript.jsonl  cc-tui-mock.txt  docs-mock.txt  fastapi-mock.txt
demos/gcp-host/: README.md  bootstrap.sh  provision-vm.sh
demos/lib/: capture.mjs  gif-to-mp4.sh  manifest.mjs  profile.mjs  workflow.mjs
demos/profiles/: day-start.json  multi-project.json
demos/runner/: run-all.mjs
demos/site/: index.html  workflow.html
demos/terminal/: brew-install.sh  install.sh
demos/workflows/: chat-view.mjs  day-in-the-life.mjs  new-session.mjs  pane-picker.mjs  paste-flow.mjs  tab-switch.mjs  tabs-projects.mjs  use-flow.mjs
docs/tutorials/: README.md
pages/: deploy.sh  index.html
scripts/: gen-homebrew-formula.sh  gen-topics.mjs  gif-to-mp4.sh  record-brew-demo.sh  record-install-demo.sh
src/: cc_search.rs  download.rs  main.rs  origin.rs  push.rs
