[package]
name = "mobile-cc"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Drive Claude Code from your phone. Mobile-focused packaging of ttyview-core."
repository = "https://github.com/eyalev/mobile-cc"
homepage = "https://mobile-cc.dev"
authors = ["Eyal Levin <eyalev@gmail.com>"]
keywords = ["claude", "mobile", "tmux", "terminal", "agent"]
categories = ["command-line-utilities"]

[[bin]]
name = "mobile-cc"
path = "src/main.rs"

[dependencies]
# Path-dep during ttyview-core's pre-publish phase. The `version` is the
# constraint cargo would enforce if/when ttyview-core lands on crates.io;
# it also lets cargo-deny's wildcard check pass. Keep this in lock-step
# with the ttyview tag CI checks out (TTYVIEW_REF in the workflows) — the
# v0.1.7 tag adds desktop auto-widen (fill wide viewports) on top of v0.1.6's
# deep scrollback / `RunOptions.max_scrollback`.
ttyview-core = { path = "../ttyview/crates/ttyview-core", version = "0.1.7" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
