[package]
name = "mobile-cc"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Drive Claude Code from your phone. Mobile-focused packaging of ttyview-core."
repository = "https://github.com/eyalev/mobile-cc"
homepage = "https://mobile-cc.dev"
authors = ["Eyal Levin <eyalev@gmail.com>"]
keywords = ["claude", "mobile", "tmux", "terminal", "agent"]
categories = ["command-line-utilities"]

[[bin]]
name = "mobile-cc"
path = "src/main.rs"

[dependencies]
# Path-dep during ttyview-core's pre-publish phase. The `version` is the
# constraint cargo would enforce if/when ttyview-core lands on crates.io;
# it also lets cargo-deny's wildcard check pass. Keep this in lock-step
# with the ttyview tag CI checks out (TTYVIEW_REF in the workflows) — the
# v0.2.0 tag adds the tab-card/menu/recents overhaul, per-session topics,
# real-time STT, the savePins guard + hydrate-fail write-suppression, and the
# RunOptions.extra_api hook the cc-search/topics endpoints mount on.
ttyview-core = { path = "../ttyview/crates/ttyview-core", version = "0.2.0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"
# cc-search endpoint (src/cc_search.rs). axum MUST track ttyview-core's
# axum version (0.7) so the `extra_api` closure passes the same `Router`
# type across the crate boundary.
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
